<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AccountDetailActivity">
    -->

    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/accountTitle"
        android:text="@string/accountName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountCurrentBalance_label"
        android:text="@string/current_account_balance"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/accountTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountCurrentBalance"
        android:text="@string/zero"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/accountCurrentBalance_label"
        app:layout_constraintStart_toEndOf="@+id/accountCurrentBalance_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountAvailableBalance_label"
        android:text="@string/available_account_balance"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/accountCurrentBalance"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountAvailableBalance"
        android:text="@string/zero"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/accountAvailableBalance_label"
        app:layout_constraintStart_toEndOf="@+id/accountAvailableBalance_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountPendingDeposits_label"
        android:text="@string/pending_deposits"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/accountAvailableBalance"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountPendingDeposits"
        android:text="@string/zero"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/accountPendingDeposits_label"
        app:layout_constraintStart_toEndOf="@+id/accountPendingDeposits_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountPendingPayments_label"
        android:text="@string/pending_payments"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/accountPendingDeposits"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountPendingPayments"
        android:text="@string/zero"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/accountPendingPayments_label"
        app:layout_constraintStart_toEndOf="@+id/accountPendingPayments_label" />

    <Button
        android:id="@+id/addTransactionButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTransactionButton"
        android:onClick="onClickAddNewTransaction"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/accountPendingPayments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_detail_recyclerview"
        app:layout_constraintTop_toBottomOf="@id/addTransactionButton"
        android:layout_margin="8dp">

    </android.support.v7.widget.RecyclerView>



</android.support.constraint.ConstraintLayout>