<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="100dp">

    <TextView
        android:id="@+id/budget_summary_budgetid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/budget_summary_budgetnamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/budgetName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/budget_summary_budgetname"
        android:text="@string/budgetSummaryBudgetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@+id/budget_summary_budgetnamelabel"
        app:layout_constraintTop_toTopOf="@id/budget_summary_budgetnamelabel"/>

    <TextView
        android:id="@+id/budget_summary_budgetcbalancelabel"
        android:text="@string/current_budget_balance"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/budget_summary_budgetnamelabel"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/budget_summary_budgetcbalance"
        android:text="@string/budgetSummaryCBudgetBalance"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/budget_summary_budgetcbalancelabel"
        app:layout_constraintStart_toEndOf="@+id/budget_summary_budgetcbalancelabel">
    </TextView>

    <TextView
        android:id="@+id/budget_summary_budgetabalancelabel"
        android:text="Available Budget Balance"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/budget_summary_budgetcbalancelabel"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/budget_summary_budgetabalance"
        android:text="@string/budgetSummaryCBudgetBalance"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/budget_summary_budgetabalancelabel"
        app:layout_constraintStart_toEndOf="@+id/budget_summary_budgetabalancelabel"/>


    <ImageButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/budget_summary_editbudget"
        android:contentDescription="@string/budgetSummaryEditBudget"
        android:onClick="onClickEditBudget"
        app:srcCompat="@drawable/ic_menu_manage"
        app:layout_constraintTop_toBottomOf="@id/budget_summary_budgetabalance"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp">
    </ImageButton>


    <ImageButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/budget_summary_deletebudget"
        android:contentDescription="@string/budgetSummaryDeleteBudget"
        android:onClick="onClickDeleteBudget"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/budget_summary_budgetabalance"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp">
    </ImageButton>

</android.support.constraint.ConstraintLayout>