<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".55"
            android:orientation="horizontal">
            <!--android:weightSum="5"-->
            <Button
                android:id="@+id/backButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.15"
                android:text="@string/backButton"
                android:textSize="13sp"/>
            <TextView
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.7"
                android:text="@string/accountName"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/editButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.15"
                android:text="@string/editButton"
                android:textSize="13sp"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="3.9">
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".55"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Button
                android:id="@+id/addButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addButton"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>