<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    ><!--tools:context=".AccountCreationActivity">-->

    <!-- Constraint layout handles everything we need here by setting the correct constraints of the views in relation to each other-->

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">-->

        <!-- We should implement the buttons here as items on the menu bar-->
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".55"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/backButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.15"
                android:text="@string/backButton"
                android:textSize="13sp"/>

        </LinearLayout>-->

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginTop="40sp">-->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_account_name"
            android:textAlignment="center"
            android:layout_margin="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/account_name_creation"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_account_type"
            android:textAlignment="center"
            android:layout_margin="32dp"
            app:layout_constraintTop_toBottomOf="@id/account_name_creation"
            android:id="@+id/account_type_creation"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_starting_amount"
            android:textAlignment="center"
            android:layout_margin="32dp"
            app:layout_constraintTop_toBottomOf="@id/account_type_creation"
            android:id="@+id/starting_amount_creation"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/createAccountButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_margin="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/createAccountButton"
            app:layout_constraintTop_toBottomOf="@id/starting_amount_creation"
            android:onClick="onClickCreateAccount"/>

        <Button
            android:id="@+id/cancelAccountButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_margin="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/cancelAccountButton"
            app:layout_constraintTop_toBottomOf="@id/createAccountButton"
            android:onClick="onClickCancel"/>


        <!--</LinearLayout>-->

    <!--</LinearLayout>-->
</android.support.constraint.ConstraintLayout>